--- a/Configurator.UI/src/client-app/integration/resources/components/resource-list.component.html
+++ b/Configurator.UI/src/client-app/integration/resources/components/resource-list.component.html
@@ -106,7 +106,7 @@
             </button>
 
 
-            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model,model.id)">
+            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model.id)">
                 <i class="fa fa-trash" aria-hidden="true"></i>
             </a>
 
