--- a/Configurator.UI/src/client-app/razor/components/module-config-modal.component.html
+++ b/Configurator.UI/src/client-app/razor/components/module-config-modal.component.html
@@ -1,4 +1,4 @@
-<p-dialog [(visible)]="Show" (onHide)="OnModalHide()" [modal]="true"  [width]="800">
+<p-dialog [(visible)]="Show" (onHide)="OnModalHide()" [modal]="true" >
     <p-header>
 {{'Pages.Razor__ModuleConfigModal' | translate }}    </p-header>
 
