--- a/Configurator.UI/src/client-app/razor/components/page-category-list.component.html
+++ b/Configurator.UI/src/client-app/razor/components/page-category-list.component.html
@@ -122,7 +122,7 @@
             </a>
 
 
-            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model,model.id)">
+            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model.id)">
                 <i class="fa fa-trash" aria-hidden="true"></i>
             </a>
 
