--- a/Configurator.UI/src/client-app/routing/components/page-list.component.html
+++ b/Configurator.UI/src/client-app/routing/components/page-list.component.html
@@ -90,7 +90,7 @@
         title="{{'Words.Controls' | translate }}">
         <i class="fa fa-tasks"></i> 
     </a>
-            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model,model.id)">
+            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model.id)">
                 <i class="fa fa-trash" aria-hidden="true"></i>
             </a>
 
