--- a/Configurator.UI/src/client-app/shared/components/server-tracer-modal.component.html
+++ b/Configurator.UI/src/client-app/shared/components/server-tracer-modal.component.html
@@ -1,4 +1,4 @@
-<p-dialog [(visible)]="Show" (onHide)="OnModalHide()" [modal]="true"  [width]="1000">
+<p-dialog [(visible)]="Show" (onHide)="OnModalHide()" [modal]="true"  >
     <p-header>
 {{'Pages.Shared__ServerTracerModal' | translate }}    </p-header>
 
