--- a/Configurator.UI/src/client-app/generations/tenants/components/tenant-list.component.html
+++ b/Configurator.UI/src/client-app/generations/tenants/components/tenant-list.component.html
@@ -152,7 +152,7 @@
                 <i class="fa fa-copy"></i>
             </a>
 
-            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model,model.id)">
+            <a *ngIf="Permission.delete" class="btn btn-danger btn-sm" (click)="Delete(model.id)">
                 <i class="fa fa-trash" aria-hidden="true"></i>
             </a>
 
