--- a/Configurator.UI/src/assets/css/gif-loader.css
+++ b/Configurator.UI/src/assets/css/gif-loader.css
@@ -11,7 +11,7 @@
 }
 
 .loader {
-    background-image: url(/img/loader.gif);
+    background-image: url(/assets/img/loader.gif);
     z-index: 999999;
     display: block;
     height: 100%;
