--- a/Configurator.Config.Api/ShellComponents/Angular/Layout/ModalTreeLayout.cshtml
+++ b/Configurator.Config.Api/ShellComponents/Angular/Layout/ModalTreeLayout.cshtml
@@ -1,4 +1,4 @@
-﻿<p-dialog [(visible)]="Show" (onHide)="OnModalHide()" [contentStyle]="{'max-height':'280px'}" height="90vh" [width]="ModalWidth" [modal]="true">
+﻿<p-dialog [(visible)]="Show" (onHide)="OnModalHide()" [contentStyle]="{'max-height':'280px'}" height="90vh" [modal]="true">
 
     <p-header>
         @if (!IsSectionDefined("header"))
