--- a/Configurator.Config.Api/Views/PageCategories/ModulesConfig.cshtml
+++ b/Configurator.Config.Api/Views/PageCategories/ModulesConfig.cshtml
@@ -1,7 +1,9 @@
 ﻿@model ModuleRequestDTO
 @{
     Layout = Html.Config().Layout;
-    Html.ModalModel().Attrs = new { calc__width = "800" };
+    //Html.ModalModel().Attrs = new { 
+    //    //calc__width = "800"
+    //};
     Html.UseSplitTheme();
 }
 @using (Html.NgForm("Form"))
