--- a/Configurator.UI/src/client-app/app.component.html
+++ b/Configurator.UI/src/client-app/app.component.html
@@ -30,7 +30,7 @@
 </div>
 
 <div [ngClass]="Locale=='ar'? 'ui-rtl':null" [dir]="Locale=='ar'? 'rtl':null">
-    <ng-template test-loader></ng-template>
+    <ng-template acs-component-loader></ng-template>
 
     <p-dialog #deleteDialog [(visible)]="deleteDialogShow" [modal]="true" width="600">
         <p-header>
