--- a/Configurator.Config.Api/Views/AppComponent.cshtml
+++ b/Configurator.Config.Api/Views/AppComponent.cshtml
@@ -13,7 +13,7 @@
     <link href="/assets/css/style.css" rel="stylesheet" />
 </ng-container>
 
-<div [@loader]="ShowLoader ? 'shown' : 'hidden'" class="loader-overlay">
+<div [hidden]="ShowLoader" class="loader-overlay">
     <div class="loader"></div>
 </div>
 
@@ -30,7 +30,7 @@
 </div>
 
 <div [ngClass]="Locale=='ar'? 'ui-rtl':null" [dir]="Locale=='ar'? 'rtl':null">
-    <ng-template test-loader></ng-template>
+    <ng-template acs-component-loader></ng-template>
 
     <p-dialog #deleteDialog [(visible)]="deleteDialogShow" [modal]="true" width="600">
         <p-header>
