--- a/Configurator.UI/src/core/base/main/top-bar.component.html
+++ b/Configurator.UI/src/core/base/main/top-bar.component.html
@@ -30,10 +30,10 @@
                     </li>
                     <li *ngIf="App.UseState.tenantCode">
                         <div class="btn-group">
-                            <button class="btn btn-info" (click)="RenderAll()" title="{{'Words.RenderAll' | translate}}"><i class="fa fa-image fa-lg"></i></button> 
-                            <button class="btn btn-warning" (click)="Definition()" title="{{'Words.Definition' | translate}}"><i class="fa fa-language fa-lg"></i></button> 
+                            <button class="btn btn-info" (click)="RenderAll()" title="{{'Words.RenderAll' | translate}}"><i class="fa fa-image fa-lg"></i></button>
+                            <button class="btn btn-warning" (click)="Definition()" title="{{'Words.Definition' | translate}}"><i class="fa fa-language fa-lg"></i></button>
                         </div>
-                       
+
                     </li>
                     <li *ngIf="!isLoggedIn">
                         <a routerLink="/Login" routerLinkActive="hidden">
@@ -42,22 +42,22 @@
                     </li>
                 </ul>
                 <ul class="nav nav-pills">
-                    
+
                     <li *ngIf="isLoggedIn" role="presentation" class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" onclick="return false" (click)="toggleMenu()" role="button" aria-haspopup="true" aria-expanded="false">
                             {{user.name}}
                             <img class="img-circle" [src]="user.photo?'/'+user.photo:'assets/img/default_user.png'" />
                             <span class="caret"></span>
                         </a>
-                        <ul class="dropdown-menu navbar-inverse">
+                        <ul class="dropdown-menu navbar-inverse" [ngClass]="showUserMenu?'show':''">
                             <li *ngIf="changePasswordItem">
                                 <a (click)="ChangePassword()">
-                                    <i class="fa fa-key"></i>  &nbsp;&nbsp;{{'Words.ChangePassword' | translate}}
+                                    <i class="fa fa-key"></i> &nbsp;&nbsp;{{'Words.ChangePassword' | translate}}
                                 </a>
                             </li>
                             <li *ngIf="editProfileItem">
                                 <a (click)="EditProfile()">
-                                    <i class="fa fa-user"></i>  &nbsp;&nbsp;{{'Words.EditProfile' | translate}}
+                                    <i class="fa fa-user"></i> &nbsp;&nbsp;{{'Words.EditProfile' | translate}}
                                 </a>
                             </li>
                             <li>
