--- a/Configurator.UI/src/client-app/generations/tenants/components/tenant-details.component.html
+++ b/Configurator.UI/src/client-app/generations/tenants/components/tenant-details.component.html
@@ -32,7 +32,7 @@
         <a routerLink="/">{{'Words.Main' | translate }}</a>
     </li>
         <li>
-            <a routerLink="/generations/tenants/tenant-list">{{'Pages.tenants__tenant-list' | translate }}</a>
+            <a routerLink="/generations/tenants/tenant-list">{{'Pages.Tenants__TenantList' | translate }}</a>
         </li>
     <li>
         {{'Pages.Tenants__TenantDetails' | translate }}
