--- a/Configurator.UI/src/client-app/routing/page-controls/components/page-customization.component.html
+++ b/Configurator.UI/src/client-app/routing/page-controls/components/page-customization.component.html
@@ -60,7 +60,7 @@
         <a routerLink="/">{{'Words.Main' | translate }}</a>
     </li>
         <li>
-            <a routerLink="/routing/pages/page-tree-list">{{'Pages.pages__page-tree-list' | translate }}</a>
+            <a routerLink="/routing/pages/page-tree-list">{{'Pages.Pages__PageTreeList' | translate }}</a>
         </li>
     <li>
         {{'Pages.PageControls__PageCustomization' | translate }}
