--- a/Configurator.Config.Api/Views/AppComponent.cshtml
+++ b/Configurator.Config.Api/Views/AppComponent.cshtml
@@ -1,4 +1,4 @@
-<div [hidden]="ShowLoader" class="loader-overlay">
+<div [hidden]="!ShowLoader" class="loader-overlay">
     <div class="loader"></div>
 </div>
 
