--- a/Configurator.UI/src/client-app/generations/tenants/components/tenant-create.component.html
+++ b/Configurator.UI/src/client-app/generations/tenants/components/tenant-create.component.html
@@ -175,7 +175,7 @@
      id="FG_entity_logoFile"
      #FG_entity_logoFile="bsFormGroup" bs-group
      >
-    <label>{{'Columns.Tenant__LogoFile' | translate }} <span style="color:red">*</span></label>
+    <label>{{'Columns.Tenant__LogoFile' | translate }} </label>
     
 <div class="input-group">
     <label class="form-control">
@@ -194,16 +194,14 @@
                            [(ngModel)]="f_logo"
                            [file-uploader]="upload"
                            [(fileData)]="model.entity.logoFile"
-                           required  
+                            
                            style="display:none">
                     <i class="fa fa-upload"></i>
                 </label>
             </div>
 </div>
 
-    <span *ngIf="Form.controls['f_logo'] && Form.controls['f_logo'].invalid">
-        <small *ngIf="Form.controls['f_logo'].errors!.required" class="form-text text-danger">{{'Messages.field_required' | translate : {p0:'Columns.Tenant__LogoFile' | translate } }}</small>
-</span>
+    
 </div>
 
     </div>
