styling, sync tenant with parent

--- a/Configurator.UI/src/assets/moldster/css/moldster.css
+++ b/Configurator.UI/src/assets/moldster/css/moldster.css
@@ -155,7 +155,7 @@ tr.selected>td {
 .content-wrapper.expanded {
     transition: all .7s ease-in-out, opacity 1s ease-in-out;
     margin-top: 64px;
-    /* position: absolute; */
+    position: absolute;
     top: 0px;
     bottom: 0px;
 }
@@ -181,6 +181,7 @@ tr.selected>td {
     background-color: #222;
     vertical-align: top;
     overflow: hidden;
+    position: fixed;
 }
 
 .wrapper-side .nav-side {
