--- a/Configurator.UI/src/assets/css/style.css
+++ b/Configurator.UI/src/assets/css/style.css
@@ -1,10 +1,12 @@
 ﻿.visit-status-setter {
-    position:fixed;
-    background-color:white;
-    padding:15px;
-    box-shadow:1px 1px 3px rgba(0,0,0,.4);
+    position: fixed;
+    background-color: white;
+    padding: 15px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
 }
-.table, .padTop {
+
+.table,
+.padTop {
     font-size: 13px;
 }
 
@@ -15,16 +17,17 @@
 }
 
 .wrapper-content.wrapper-content-toggle {
-    transition: all 1s ease-in-out,opacity 1s ease-in-out;
+    transition: all 1s ease-in-out, opacity 1s ease-in-out;
     width: auto !important;
 }
+
 .table tr.active td {
     background-color: #123456 !important;
     color: white;
 }
 
-.new-line{
-    display:block;
+.new-line {
+    display: block;
 }
 
 .generationInfoline {
@@ -36,7 +39,6 @@
     0% {
         transform: translateX(-100%);
     }
-
     100% {
         transform: translateX(0);
     }
@@ -52,20 +54,19 @@
     border-radius: 4px;
     font-size: 14px;
     height: 300px;
-    overflow-y: scroll;
     background-color: #aaaacf;
     font-family: cambria;
     padding: 15px;
-    box-shadow: 2px 2px 3px rgba(0,0,0,.4) inset;
-       white-space:pre;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, .4) inset;
+    white-space: pre;
+    max-width: 1000px;
+    overflow: scroll;
 }
 
-
-
-.top-bar ul.nav{
+.top-bar ul.nav {
     display: inline-block;
 }
 
-.top-bar .toolbox li{
+.top-bar .toolbox li {
     padding: 5px;
 }
